
2.3633 UNREL
        - added the test platform I2C address map listing (closes #103)
        - EEPROM: add the new RPi::EEPROM::AT24C32 distribution for EEPROM
          access (closes #104)
        - implemented IPC::Shareable so we can read and write object and other
          various information (pins, test info etc) between separate processes
          and objects (closes #107)

2.3632  2019-06-22
        - added the digital potentiometer (MCP4xxxx) to the test platform (in
          this case, we're using the single pot MCP41010). (Closes #87)
        - correct markup error in FAQ (closes #100)
        - added BMP180 to the test platform (closes #85)
        - OLED displays are now available
        - reorganized all test files so that when unit testing with
          Test::BrewBuild, the LCD will retain the test results for the majority
          of the test run
        - added new testing env var "RPI_RELEASE_TESTING", so that we can
          install other CPAN distributions without breaking things due to
          "RELEASE_TESTING" always being set
        - fully integrated the new RPi::SysInfo distribution as a parent to
          RPi::WiringPi::Core
        - updated stepper motor FAQ with new GPIO expander functionality
          (closes #102)

2.3631  2019-02-25
        - no functional changes -- all changes are documentation
        - added section on the automated testing section of FAQ that on modern
          perlbrews (>0.86), you must have more than one perl installed for the
          version numbers to be displayed (closes #96)
        - in FAQ's perlbrew setup, add the task of doing a reboot after install
          (closes #93)
        - removed most of SYNOPSIS and replaced with a link to the FAQ
          (closes #92)
        - added RPi::Pin's pwm_range() to the FAQ (closes #91);
        - added section in auto-test section of FAQ for Test::BrewBuild install
          (work on #95)